Sun Feb 10 15:32:27 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - configure.in,(clients|drivers|server)/Makefile.am: only add target
   specific CFLAGS if the target is enabled [Alioth Bug #310582]

Sat Feb  9 19:44:41 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/serial.[ch]: pass the buffer argument as (void *) pointer,
   rather than as a (char *) or (unsigned char *) where possible, to
   shut up compiler warnings about mismatches in signedness and to
   allow passing other variable types too without typecasting
 - drivers/megatec_usb.c: adapt the ser_get_line() function to the
   above

Sat Feb  9 11:40:50 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - no comment (it has to do with the HAL support once more)
   [Alioth Bug #304156]

Sat Feb  9 10:50:09 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - fix HAL support installation yet once again [Alioth Bug #304156]

Sat Feb  9 00:21:49 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - packaging/debian/rules: updated for HAL path changes

Fri Feb  8 23:59:24 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: enable code to set Unit ID.

Fri Feb  8 19:53:01 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - drivers/megatec.c: flush buffers before ser_send_*/ser_get_* to avoid a
   possible loss of synchronization if the buffer happens to have garbage.

Fri Feb  8 19:38:01 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerp-bin.c: add conversion functions and variable lists
   for the CyberPower OP series (autodetected)

Fri Feb  8 19:25:30 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - fix HAL support installation again [Alioth Bug #304156]

Fri Feb  8 07:08:49 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c,include/common.h: cleanup and change the arguments
   to the upsdebug_hex() function so that it no longer requires casting
   to an unsigned char.

Wed Feb  6 21:07:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
