@@ -1,11 +1,15 @@
 # Network UPS Tools: clients
 
 # by default, link programs in this directory with libcommon.a
-LDADD = ../common/libcommon.a -lupsclient $(NETLIBS) $(LIBSSL_LDFLAGS)
+LDADD = ../common/libcommon.a -lupsclient $(NETLIBS)
+if WITH_SSL
+  LDADD += $(LIBSSL_LDFLAGS)
+endif
+
 # Avoid per-target CFLAGS, because this will prevent re-use of object
-# files. In any case, CFLAGS are only -I options, so there is no harm...
+# files. In any case, CFLAGS are only -I options, so there is no harm,
+# but only add them if we really use the target.
 AM_CFLAGS = -I$(top_srcdir)/include
-# ...but only when the target is used
 if WITH_SSL
   AM_CFLAGS += $(LIBSSL_CFLAGS)
 endif
