@@ -1,3 +1,9 @@
+Sun Feb 10 16:06:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - (clients|drivers|server)/Makefile.am: only add target specific
+   LDFLAGS if the target is enabled (in case something is really broken
+   and the linker chokes on it)
+
 Sun Feb 10 15:32:27 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - configure.in,(clients|drivers|server)/Makefile.am: only add target
